--- a/new-projeto/src/index.html
+++ b/new-projeto/src/index.html
@@ -4,7 +4,9 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Funcionários</h1>
+    <div class="header">
+      <h1>Funcionários</h1>
+    </div>
     <div id="funcionarios"></div>
     <script src="exer7.js"></script>
   </body>
