--- a/new-projeto/src/index.html
+++ b/new-projeto/src/index.html
@@ -8,6 +8,9 @@
       <h1>Funcionários</h1>
     </div>
     <div id="funcionarios"></div>
+    <div class="footer">
+      <p>Desenvolvido por <a href="https://github.com/rafaelmarceloreim">Rafael Marcelo Reim</a></p>
+    </div>
     <script src="exer7.js"></script>
   </body>
 </html>
