--- a/bk-ft-ts/frontend/index.html
+++ b/bk-ft-ts/frontend/index.html
@@ -1,5 +1,4 @@
 <!-- frontend/index.html -->
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -9,11 +8,25 @@
 </head>
 <body>
   <main claas="container">
-    <h1>Usuários</h1>
-    <button id="btn-carregar">Carregar Usuários</button>
-    <ul id="lista-usuarios"></ul>
+    <header>
+      <nav class="menu">
+        <ul class="menu-list">
+          <li class="menu-item"><a href="http://localhost:3000/usuarios">Usuários</a></li>
+          <li class="menu-item"><a href="http://localhost:3000/carros">Carros</a></li>
+        </ul>
+      </nav>
+    </header>
+    <section class="usuarios">
+      <h1>Usuários</h1>
+        <button id="btn-carregar">Carregar Usuários</button>
+          <ul id="lista-usuarios"></ul>
+    </section>
+    <section class="carros">
+      <h1>Carros</h1>
+        <button id="btn-carregar-carros">Carregar Carros</button> 
+          <ul id="lista-carros"></ul>
+    </section>
   </main>
-
   <script src="src/index.js"></script>
 </body>
 </html>
