--- a/bk-ft-ts/frontend/index.html
+++ b/bk-ft-ts/frontend/index.html
@@ -5,15 +5,16 @@
   <meta charset="UTF-8" />
   <title>Lista de Usuários</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 </head>
 <body>
   <main claas="container">
     <header>
       <nav class="menu">
-        <ul class="menu-list">
-          <li class="menu-item"><a href="http://localhost:3000/usuarios">Usuários</a></li>
-          <li class="menu-item"><a href="http://localhost:3000/carros">Carros</a></li>
-        </ul>
+            <ul class="menu-list">
+              <li class="menu-item"><a href="http://localhost:3000/usuarios">Usuários</a></li>
+              <li class="menu-item"><a href="http://localhost:3000/carros">Carros</a></li>
+            </ul>
       </nav>
     </header>
     <section class="usuarios">
@@ -28,5 +29,6 @@
     </section>
   </main>
   <script src="src/index.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 </body>
 </html>
