--- a/bk-ft-ts/frontend/index.html
+++ b/bk-ft-ts/frontend/index.html
@@ -6,15 +6,15 @@
   <title>Lista de Usuários</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
 <body>
   <main claas="container">
     <header>
       <nav class="menu">
-            <ul class="menu-list">
-              <li class="menu-item"><a href="http://localhost:3000/usuarios">Usuários</a></li>
-              <li class="menu-item"><a href="http://localhost:3000/carros">Carros</a></li>
-            </ul>
+            <h1>Dev Reimberg test em back e front</h1>
       </nav>
     </header>
     <section class="usuarios">
@@ -24,7 +24,7 @@
     </section>
     <section class="carros">
       <h1>Carros</h1>
-        <button id="btn-carregar-carros">Carregar Carros</button> 
+        <button id="btn-carregar-carros">Carregar Carros</button>
           <ul id="lista-carros"></ul>
     </section>
   </main>
