--- a/estoque/frontend/index.html
+++ b/estoque/frontend/index.html
@@ -20,9 +20,21 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li><a class="navbar-brand" href="#">Produtos</a></li>
-                
-                        <li><a class="navbar-brand" href="#">Cadastros</a></li>     
-
+                        
+                        <li class="nav-item dropdown">
+                            <a class="navbar-brand dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">Cadastros
+                            </a>     
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Cadastro de Produtos</a></li>
+                                <li><a class="dropdown-item" href="#">Entrada de Produtos</a></li>
+                                <li><a class="dropdown-item" href="#">Saída de Produtos</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="#">Dashborad</a></li>
+                            </ul>
+                        </li>        
                         <li class="nav-item dropdown">
                             <a class="navbar-brand dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
