--- a/todo-list-ts/index.html
+++ b/todo-list-ts/index.html
@@ -4,10 +4,13 @@
   <meta charset="UTF-8" />
   <title>Gerenciador de Tarefas</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Momo+Trust+Display&family=Roboto:ital,wght@1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
   <div id="app">
-    <h1>📝 Minhas Tarefas</h1>
+    <h1 class="title">📝- "Minhas Tarefas"</h1>
     <form id="taskForm">
       <input type="text" id="taskInput" placeholder="Digite uma tarefa..." required />
       <button class="add" type="submit">Adicionar</button>
