--- a/estoque-projeto/frontend/index.html
+++ b/estoque-projeto/frontend/index.html
@@ -7,7 +7,8 @@
   <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-      <h1>Sistema de Estoque</h1>
+      <h1 class="title">Sistema de Estoque</h1>
+      <p class="">Sistema de estoque para diversos produtos da area de estoque.</p>
 
       <div class="form">
         <input type="text" id="nome" placeholder="Nome do produto">
